force-app/main/default/objects/WhatsApp_Config__mdt/WhatsApp_Config__mdt.object-meta.xml
<CustomObject>
    <description>Meta WhatsApp Cloud API routing (phone number id, template). One row: Default.</description>
    <label>WhatsApp Config</label>
    <pluralLabel>WhatsApp Configs</pluralLabel>
</CustomObject>