force-app/main/default/objects/WhatsApp_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, WhatsApp receipt sending is allowed (still requires hierarchy token + opt-in).</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>