force-app/main/default/objects/WhatsApp_Config__mdt/fields/Country_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Country_Prefix__c</fullName>
    <description>Country calling code without + (e.g. 91 for India). Prepended to 10-digit local numbers for WhatsApp &quot;to&quot; field.</description>
    <label>Country Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>