force-app/main/default/objects/WhatsApp_Config__mdt/fields/Phone_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_Id__c</fullName>
    <description>WhatsApp Business phone number ID from Meta (used in /vXX.X/PHONE_NUMBER_ID/media and messages).</description>
    <label>Phone Number Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>