force-app/main/default/objects/WhatsApp_Config__mdt/fields/Template_Language__c.field-meta.xml
<CustomField>
    <fullName>Template_Language__c</fullName>
    <description>Template language code, e.g. en_US</description>
    <label>Template Language</label>
    <length>32</length>
    <type>Text</type>
</CustomField>