force-app/main/default/objects/WhatsApp_Config__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Approved Meta template name (WhatsApp Manager). Must match a template with DOCUMENT header and body variable {{1}} for restaurant name.</description>
    <label>Template Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>